css/index.css
header {
  width: 100%;
	margin: 0;
	padding:0;
	background: black;
	color: white;	
 	/* position: fixed;
 	 z-index:1000;*/
}

footer {
  width: 100%;
	padding: 1%;
	background: black;
	color: white;	
}

.smallprint {
  font-size: 20px;
  padding:5px;
}

.beginningFont {
  /*text-decoration: underline;*/
  font-weight: bold;
}

header nav h1, nav ul{
  display: inline;
}

nav ul li {
	margin: 10px 10px 10px 5px;
	background: black;
	padding: 5px 10px;	
}

/*The important is needed to override bootstrap*/
a {
  color: white !important;
}

ul.nav.navbar-nav.navbar-right li {
	margin: 10px 0px 0px 5px;
}

a:hover {
background-color: black !important;
color: #999 !important;
text-decoration: none !important;
}

a.resumecolors:link {
  color: #0000EE !important;
  text-decoration: none !important;
}

a.resumecolors:hover {
    text-decoration: underline !important;
}

a.resumecolors:visited {
    color: #551A8B !important;
    text-decoration: none !important;
}

ul li {
	display: inline-block; 
}

#profile {
	width: 80%;
	height: 80%;
	border-radius: 500px;
	margin: 20px;
}

img {
	width: 30%;
	height: 30%;
}

.profileImg{
	width: 100%;
	max-height: 380px;
	max-width: 384px;
}

body {
	margin: 0% 5%;
	padding: 0;
	background-color: #999;
}

body.container-fluid {
	padding: 0;
}

#whitebox {
	margin: 0%;
	height: 100%;
	padding: 0%;
	background-color: white;
}

#mainTextBody {
	padding: 0px 40px 0px 40px;
}

html {
	margin: 0;
	padding: 0;
}

.font1, h2 {
	margin-top: 0px;
	font-family: "Cinzel", serif;
    padding: 0;
}

.font2 {
	font-family: "Roboto", sans-serif;
	font-size: 16px;
    padding: 0;
}

